# shellman

./: .gitignore  README.md  TODO  install.sh  install_shellman_system_wide.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: check-line-endings.yml
commands/: checksum_files.sh  clean_files.sh  count_lines.sh  csv_extract.sh  date_utils.sh  doctor.sh  encrypt_files.sh  excel_diff.sh  excel_info.sh  excel_preview.sh  excel_to_csv.sh  extract_lines.sh  file_convert.sh  file_stats.sh  find_files.sh  install_bats.sh  json_extract.sh  line_endings.sh  merge_files.sh  replace_text.sh  sys_summary.sh  tail_follow.sh  update.sh  zip_batch.sh
completions/: shellman.bash
contrib/: _shellman  shellman_completion.bash
files_for_trening/: file_convert.json  file_convert.toml  file_convert.yml  report.xlsx
files_for_trening/wyniki/: Report_20250723_135701.csv
lib/: utils.sh
lib/py/: excel_diff.py  file_converter.py
shellman/: cli.py  pyproject.toml  style_tools.py
shellman/commands/: change_line_end.py  checksum_files.py  clean_files.py  count_lines.py  csv_extract.py  date_utils.py  dir_tree.py  encrypt_files.py  excel.py  excel_info.py  excel_preview.py  excel_to_csv.py  extract_lines.py  file_convert.py  file_stats.py  find_files.py  json_extract.py  lines.py  merge_files.py  observe_dir.py  open_ports.py  replace_text.py  speed_test.py  sys.py  sys_summary.py  zip.py  zip_batch.py
shellman/help_texts/change_line_end/: help_eng.md  help_pl.md
shellman/help_texts/checksum_files/: help_eng.md  help_pl.md
shellman/help_texts/clean_files/: help_eng.md  help_pl.md
shellman/help_texts/count_lines/: help_eng.md  help_pl.md
shellman/help_texts/csv_extract/: help_eng.md  help_pl.md
shellman/help_texts/date_utils/: help_pl.md  hepl_eng.md
tests/: checksums.sha256sum  count_lines.bats  csv_extract.bats  encrypt_files.bats  excel_diff.bats  file_stats.bats  find_files.bats  line_endings.bats  merge_files.bats  replace_text.bats  test_change_line_end.py  test_checksum_files.py  test_clean_files.py  test_count_lines.py  test_csv_extract.py  test_date_utils.py  test_encrypt_files.py  test_excel_info.py  test_excel_preview.py  test_excel_to_csv.py  test_extract_lines.py  test_file_convert.py  test_file_stats.py  test_find_files.py  test_json_extract.py  test_marge_files.py  test_replace_text.py  test_sys_summary.py  zip_batch.bats
(+32 files in other folders)
