[project]
name = "shellman"
version = "1.0.8"
description = "Your friendly shell assistant"
authors = [{name = "Jakub Marciniak", email = "jakub.marciniak.app@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click==8.1.8",
    "PyYAML==6.0.2",
    "toml==0.10.2",
    "cryptography==43.0.3",
    "openpyxl==3.1.5",
    "python-dateutil==2.9.0.post0",
    "chardet==5.2.0",
    "pyserial==3.5",
    "psutil==7.0.0",
    "wmi; sys_platform == 'win32'",  # only install on Windows
]

[project.scripts]
shellman = "shellman.cli:cli"

[tool.setuptools]
packages = ["shellman"]

[tool.ruff]
line-length = 250
target-version = "py311"  # lub twój Python

[tool.ruff.lint]
select = ["I", "F", "E", "W"]  # I = isort-style import sortowanie
fixable = ["I"]                # naprawialne: importy
ignore = []                    # możesz ignorować kody np. ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.setuptools.package-data]
"shellman" = ["help_texts/**"]